--- a/test/index.html
+++ b/test/index.html
@@ -86,7 +86,7 @@
   </div>
   <br>
   <div class="col-lg-6 col-md-1">
-    <img class="city" src="ap-decide/attempt2/images/cityview.png.jpg" alt="city cityview">
+    <img class="city" src="images\cityview.jpg" alt="city cityview">
 </div>
 
 </div>
