--- a/test/math/math.html
+++ b/test/math/math.html
@@ -22,7 +22,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Vollkorn+SC&display=swap" rel="stylesheet">
 
 <!--CSS-->
-    <link rel="stylesheet" href="sub.css">
+    <link rel="stylesheet" href="math/sub.css">
 <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
